# gitflow

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: branch_commands.rs  commit_commands.rs  conflict_commands.rs  diff_commands.rs  gh_commands.rs  graph_commands.rs  mod.rs  opener_commands.rs  remote_commands.rs  repo_commands.rs  staging_commands.rs  stash_commands.rs
src-tauri/src/git/: blame.rs  branches.rs  cherry_pick.rs  conflict.rs  diff.rs  graph.rs  mod.rs  repository.rs  staging.rs  stash.rs  status.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/watcher/: fs_watcher.rs  mod.rs
src/components/: CommandPalette.tsx  ContextMenu.tsx  ErrorBoundary.tsx
src/components/about/: AboutDialog.tsx
src/hooks/: useAppCommands.ts  useBranches.ts  useCommitGraph.ts  useDiff.ts  useFileStatus.ts  useGitHub.ts  useIpcEvent.ts  useRemote.ts  useRepository.ts  useStashes.ts
src/layouts/: AppShell.tsx
src/lib/: a11y.ts  aiTools.ts  commands.test.ts  commands.ts  diffParser.test.ts  diffParser.ts  graphLayout.test.ts  graphLayout.ts  ipc.ts  menu.ts  queryClient.ts  theme.ts
src/store/: aiStore.ts  commandLogStore.ts  confirmStore.ts  repoStore.ts  settingsStore.ts  stagingStore.ts  toastStore.ts  uiStore.ts
src/types/: contextMenu.ts  diff.ts  git.ts  github.ts  graph.ts
(+47 files in other folders)
